--- a/src/Sass/style.scss
+++ b/src/Sass/style.scss
@@ -374,6 +374,7 @@ p {
         position: absolute;
         font-size: 30px;  
         right: 24px;
+        bottom: -12px;
         font-weight: bold;
         cursor: pointer;
         visibility: hidden;
@@ -672,7 +673,7 @@ p {
 .restau__animation {
     display: flex;
     align-items: center;
-    justify-content: center;
+    // justify-content: flex-start;
     width: 0;
     height: 100%;
     background: $color-tert;
@@ -683,8 +684,9 @@ p {
         background: white;
         border-radius: 50%;
         font-size: 30px;
-        position: relative;
-        right: -35px;      
+        margin: auto;
+        // position: relative;
+        // right: -35px;      
 
     }
 }
@@ -697,7 +699,9 @@ p {
             animation: divFill ease-in-out 1s forwards;
 
             &__icon {
-                animation: iconSpin ease-in-out 1s forwards;
+                transition: all 1s;
+                transform: rotate(2turn);
+                // animation: iconSpin ease-in-out 1s forwards;
             }
 
     }
@@ -716,18 +720,19 @@ p {
     }
     100% {
         width: 60px;
+        // justify-content: center;
     }
 }
-@keyframes iconSpin {
-    0% {
-        rotate: 0turn;
-    }
-    100% {
-        rotate: 1turn;
-        translate: -35px;
-    }
+// @keyframes iconSpin {
+//     0% {
+//         rotate: 0turn;
+//     }
+//     100% {
+//         rotate: 1turn;
+//         translate: -35px;
+//     }
     
-}
+// }
 
 //Apparition progressive  des menus
 
